# medidor-lawfare

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  llms.md  pyproject.toml
data/: catalog.json
data/buffers/: MCS-1-entrada.json  MCS-2-entrada.json  MCS-3-entrada.json  MCS-4-entrada.json  MCS-5-entrada.json  MCS-6-entrada.json  MCS-7-entrada.json  MCS-8-entrada.json  MCS-9-entrada.json
data/schema/: buffer.schema.json  caso.schema.json  catalog.schema.json  cribado.schema.json  estado.schema.json  medicion.schema.json  publicacion.schema.json
docs/metodologia/: ejes.md  epistemologia-L0-L3.md  extension-mcn-rdb.md  limitaciones.md  marco.md
docs/prompts/: lectura_pack_ciudadano.prompt.md  limpiar_cuarentena_pedir.md  limpiar_cuarentena_recibir.md  llenar_buffer.md  publicar_prensa.prompt.md
docs/sesiones/: buffer-01.md  buffer-02.md  buffer-03.md  buffer-04.md  buffer-05.md  buffer-06.md  buffer-07.md  buffer-08.md  buffer-09.md  sesion-01.md
medidor_lawfare/: __init__.py  paths.py
medidor_lawfare/catalog/: __init__.py  sync.py
medidor_lawfare/cli/: build.py  commit.py  cribar.py  main.py  pack.py  prensa.py
medidor_lawfare/mcn/: __init__.py  cribador.py
medidor_lawfare/motor/: __init__.py  constantes.py  ejes.py  intensidad.py
medidor_lawfare/rdb/: __init__.py  deltas.py  estado.py
medidor_lawfare/site/: brand.py  foss_context.py  packs.py  prensa_context.py  prensa_publicaciones.py
public/: index.html
site/: brand.json
tests/: test_commit_buffer.py  test_packs.py  test_prensa_publicaciones.py  test_regression.py
(+66 files in other folders)
