[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medidor-lawfare"
version = "1.0.0"
description = "Medidor de Lawfare — cuantificación reproducible de indicios de lawfare en casos concretos"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.9"
authors = [{ name = "Medidor de Lawfare Contributors" }]
keywords = ["lawfare", "medicion", "reproducibilidad", "mcn", "mcs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jinja2>=3.1",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
medidor = "medidor_lawfare.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["medidor_lawfare*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
